Read the verifier's diagnostics in the encoding it wrote them
Making the status stream total meant reading it as ISO-8859-1, which is right
there: every token parsed out of it is ASCII, and no multi-byte UTF-8 sequence
contains a space or a newline, so the field and line boundaries are the same
bytes either way. Nothing read from that stream can be mangled because nothing
non-ASCII is read from it.

The same decoder was applied to the verifier's stderr, and that is not the same
case. Those lines are prose, they are localisable, and they carry user ids, so
reading them as ISO-8859-1 renders a UTF-8 message as mojibake - in the one
place a person reads, at the moment they are trying to find out what broke.

They are now read the way this class already reads every other tool's output: a
replacing decoder over the child's own encoding, which cannot throw either and
gets the text right on both a UTF-8 and a native-codepage platform. The constant
that held it was private to the base class and is now visible to the steps that
extend it.